--- a/components/shell/package.json
+++ b/components/shell/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "webpack serve"
+    "start": "webpack serve",
+    "gen:types": "make-federated-types --outputDir ../../foo"
   },
   "dependencies": {
     "@types/react-dom": "^17.0.9",
